--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.3-4",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "flatpickr": "^4.6.6",
-    "turbolinks": "^5.2.0"
+    "jquery": "^3.5.1",
+    "rails-ujs": "^5.2.4-4",
+    "trix": "^1.3.0",
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "vue-plugin-load-script": "^1.3.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
