--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -3,6 +3,11 @@ paypal_mock_cc_no:  'CARD_NO'
 paypal_mock_cc_exp: '00/00'
 paypal_mock_cc_cvv: '123'
 
+store_name:  'Indiesell'
+store_owner_name: 'Your Name'
+store_owner_email: 'your.name@mail.com' 
+store_owner_twitter: 'yourname'
+
 development:
   paypal_client_id: PAYPAL_CLIENT_ID
   paypal_client_sec: PAYPAL_CLIENT_SEC
