--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -7,6 +7,11 @@ store_name:  'Indiesell'
 store_owner_name: 'Your Name'
 store_owner_email: 'your.name@mail.com' 
 store_owner_twitter: 'yourname'
+store_host: 'localhost:3000'
+
+#file management - all required
+file_expiry_hours: '24'
+file_max_downloads: '10'
 
 development:
   paypal_client_id: PAYPAL_CLIENT_ID
