--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,12 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+# For in production
+microsoft:
+  service: AzureStorage
+  storage_account_name: <%= ENV['azure_storage_account_name'] %>
+  storage_access_key: <%= ENV['azure_storage_access_key'] %>
+  container: <%= ENV['azure_container'] %>
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
