--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -29,3 +29,8 @@ test:
 production:
   paypal_client_id: PAYPAL_CLIENT_ID
   paypal_client_sec: PAYPAL_CLIENT_SEC
+  pg_database_name:
+  pg_database_username:
+  pg_database_password:
+  pg_database_host:
+  pg_database_port:
