--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: <%= ENV['pg_database_name'] %>
+  username: <%= ENV['pg_database_username'] %>
+  password: <%= ENV['pg_database_password'] %>
+  host: <%= ENV['pg_database_host'] %>
+  port: <%= ENV['pg_database_port'] %>
