--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -10,7 +10,6 @@ store_owner_email: 'your.name@mail.com'
 store_owner_twitter: 'yourname'
 store_host: 'localhost:3000'
 
-#file management - all required
 file_expiry_hours: '24'
 file_max_downloads: '10'
 
@@ -21,17 +20,10 @@ azure_container: ""
 
 development:
   paypal_client_id: PAYPAL_CLIENT_ID
-  paypal_client_sec: PAYPAL_CLIENT_SEC
 
 test:
   paypal_client_id: PAYPAL_CLIENT_ID
-  paypal_client_sec: PAYPAL_CLIENT_SEC
 
 production:
   paypal_client_id: PAYPAL_CLIENT_ID
-  paypal_client_sec: PAYPAL_CLIENT_SEC
-  pg_database_name:
-  pg_database_username:
-  pg_database_password:
-  pg_database_host:
-  pg_database_port:
+  DATABASE_URL:
