--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,21 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           check-latest: true
       - run: npm install --global yarn
+     - name: Setup chrome driver environment
+       run: |
+         sudo apt-get update
+         sudo apt-get clean
+         sudo apt-get install -y wget
+         wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add
+         echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list
+         sudo apt-get -y update
+         sudo apt-get install -y google-chrome-stable
+         VERSION=`google-chrome --version | egrep -o '[0-9]+.[0-9]+' | head -1`
+         npm i webdriver-manager@latest -D
+         npm i chromedriver --chromedriver_version=$VERSION -D
       - run: npm install
       - run: npm test
-      - run: yarn
+      - run: yarn install
       - name: Install database client
         run: |
           sudo apt-get install sqlite3
@@ -30,6 +42,7 @@ jobs:
           gem install bundler
           gem install execjs -v '2.7.0'
           bundler install
+      - run: bundler exec rails assets:precompile
       - name: Create database
         run: |
           bundler exec rails db:create RAILS_ENV=test
@@ -50,11 +63,9 @@ jobs:
           paypal_mock_cc_no: ${{ secrets.PAYPAL_MOCK_CC_NO }}
           paypal_mock_cc_exp: ${{ secrets.PAYPAL_MOCK_CC_EXP }}
           paypal_mock_cc_cvv: ${{ secrets.PAYPAL_MOCK_CC_CVV }}
-
-
       - name: Upload coverage results    
         uses: actions/upload-artifact@master
         if: always()
         with:
           name: coverage-report
-          path: coverage              
+          path: coverage
