Change how to find pay with card fields

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           name: my-artifact
           path: |
-            coverage
-            tmp/capybara/
+            ${{ github.workspace }}/coverage
+            ${{ github.workspace }}/tmp/capybara/
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v2
