--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.20.1",
     "flatpickr": "^4.6.6",
-    "vue-paypal-smart-payment-buttons": "^0.0.3-alpha",
     "jquery": "^3.5.1",
     "rails-ujs": "^5.2.4-4",
     "trix": "^1.3.0",
     "turbolinks": "^5.2.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.12",
     "vue-loader": "^15.7.1",
+    "vue-paypal-smart-payment-buttons": "^0.0.3-alpha",
     "vue-template-compiler": "^2.6.10"
   },
   "version": "0.1.0",
