--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,29 +12,17 @@ microsoft:
   storage_account_name: <%= ENV['azure_storage_account_name'] %>
   storage_access_key: <%= ENV['azure_storage_access_key'] %>
   container: <%= ENV['azure_container'] %>
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+
+amazon:
+  service: S3
+  access_key_id: <%= ENV['aws_access_key_id'] %>
+  secret_access_key: <%= ENV['aws_secret_access_key'] %>
+  region: <%= ENV['aws_region'] %>
+  bucket: <%= ENV['aws_bucket'] %>
 
 # Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket
-
-# Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
-# microsoft:
-#   service: AzureStorage
-#   storage_account_name: your_account_name
-#   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
-#   container: your_container_name
-
-# mirror:
-#   service: Mirror
-#   primary: local
-#   mirrors: [ amazon, google, microsoft ]
+google:
+  service: GCS
+  project: <%= ENV['gcs_project'] %>
+  credentials: <%= ENV['gcs_credentials'] %>
+  bucket: <%= ENV['gcs_bucket'] %>
