Add also env for when creating db

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,13 @@ jobs:
       - name: Precompile assets          
         run: bundler exec rails assets:precompile
         env:
-          active_storage_provider: ${{ secrets.ACTIVE_STORAGE_PROVIDER }}      
+          active_storage_provider: ${{ secrets.ACTIVE_STORAGE_PROVIDER }}
       - name: Create database
         run: |
           bundler exec rails db:create RAILS_ENV=test
           bundler exec rails db:migrate RAILS_ENV=test
+        env:
+          active_storage_provider: ${{ secrets.ACTIVE_STORAGE_PROVIDER }}
       - name: Run tests
         run: bundler exec rspec  
         env:
